objects/CS102_3C_CriteriaDefinitionFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings define the accessibility of fields for the 100é_3C_CriteriaDefinition</description>
    <fields>
        <fullName>fieldName__c</fullName>
        <label>fieldName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>listName__c</fullName>
        <label>listName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profiles__c</fullName>
        <description>Profiles concerned by this rule</description>
        <inlineHelpText>Profiles separate by semi colon</inlineHelpText>
        <label>profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <label>sObjectName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>users__c</fullName>
        <description>List of users concerned by this rule</description>
        <inlineHelpText>Users Name separate by semi colon</inlineHelpText>
        <label>users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CS102_3C_CriteriaDefinitionFields</label>
</CustomObject>